--- a/app/src/main/res/layout/activity_vote.xml
+++ b/app/src/main/res/layout/activity_vote.xml
@@ -48,7 +48,7 @@
 
             <TextView
                 android:id="@+id/textView2"
-                android:layout_width="wrap_content"
+                android:layout_width="110dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Lenguaje"
@@ -70,7 +70,7 @@
 
             <TextView
                 android:id="@+id/textView3"
-                android:layout_width="wrap_content"
+                android:layout_width="112dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Contenido"
